= v0.6.1 - EDGE
* bug fix
  * auto-detection of association's method when the latter is virtual was broken in 1.9.2

= v0.6.0 - 2010-10-24
* netzke-core 0.6.0 compatibility, thorough refactoring
* Much more thorough testing (cucumber and rspec)
* FormPanel/GridPanel dynamic column/field configuration has been left out (planned for a separate gem)
* different bug fixes

* enhancements
  * if omitted in config, a column for the primary key is automatically added to Grid/FormPanel

* API incompatibilities
  * in FormPanel, define the fields layout directly in :items, not in :fields or :columns

* new
  * FormPanel allows for arbitrary layout of fields

= v0.5.14 - 2010-09-08
* bug fix
  * fields configurator wouldn't open in some cases
  * icons location was hardcoded in search panel (credits to @pschyska)
  * quick fix for datetimes not being displayed in the preferred timezone
  * ext_config options :enable_edit_in_form and :enable_advanced_search now do have effect
  * PropertyEditor fixed for Grid/FormPanel
  * Grid/FormPanel again obeys persistent_config option when loading columns/fields

* enhancements
  * numberfield is default in grids also for columns of type float
  * more narrow exception rescuing in GridPanel code
  * combobox options can now be searched ("type ahead") also in virtual columns (not efficient though, use at own risk!)
  * overriding an already existing attribute with `netzke_attribute` now also has effect on association attributes, such as boss__name

= v0.5.13 - 2010-08-11
* regression
  * combobox options configuration again has effect

* bug fix
  * when a TabPanel was used as a standalone widget, the first tab was rendered empty
  * Grid/FormPanel: dynamically changing of columns doesn't erase those column settings that are not configurable via GUI, but which were specified in the code

* enhancements
  * scopes can now be specified for an association combobox in Grid/FormPanels