@@ -1,5 +1,5 @@
 == Priority
-* Solve the confusion about columns being stored in the persistent config
+* Fix :meta => true config in columns work
 * On grid refresh, reset the dirty fields, so that the "Apply" button doesn't do anything
 * DataAccessor#to_array should not rescue exceptions, but rather check the availability of the attributes; `respond_to_with_basepack?` should be extended to also return true for association columns
 * GridPanel's read_only vs editable (doesn't work now) options
