@@ -1,35 +1,2 @@
-# SQLite version 3.x
-#   gem install sqlite3-ruby (not necessary on OS X Leopard)
-development:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: nbt_development
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-# test:
-#   adapter: sqlite3
-#   database: db/test.sqlite3
-#   pool: 5
-#   timeout: 5000
+# This dummy file is only here to please cucumber environment
 test:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: nbt_test
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
-
-production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
