@@ -1,13 +1,14 @@
 class SomeBorderLayout < Netzke::Basepack::BorderLayoutPanel
-  def config
-    {
-      :items => [
-        {:title => "Who", :class_name => "Basepack::GridPanel", :region => :center, :model => "User", :name => :user_grid},
-        {:title => "Item Two", :class_name => "Basepack::GridPanel", :region => :west, :width => 500, :split => true, :model => "Role", :name => :role_grid}
-      ],
-      :bbar => [:update_center_region.action, :update_west_region.action]
-    }.deep_merge(super)
-  end
+  config :items => [
+            {:title => "Who", :class_name => "Basepack::GridPanel", :region => :center, :model => "User", :name => :user_grid},
+            {:title => "Item Two", :class_name => "Basepack::GridPanel", :region => :west, :width => 500, :split => true, :collapsible => true, :model => "Role", :name => :role_grid}
+          ],
+          :bbar => [:update_center_region.action, :update_west_region.action]
+
+  action :update_center_region
+  action :update_west_region
+  
+  # config :default, :persistence => true
 
   js_method :on_update_west_region, <<-JS
     function(){
