@@ -1,4 +1,7 @@
 = v0.6.1 - EDGE
+* enhancements
+  * BorderLayoutPanel persistence: remembers region sizes and collapsed/expanded states
+  
 * bug fix
   * auto-detection of association's method when the latter is virtual was broken in 1.9.2
 
